--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -1,7 +1,7 @@
 /* txrx overrides */
 body { margin-bottom: 50px; overflow: scroll; }
 .navbar .brand { padding: 3px 20px; }
-.navbar .brand img { height: 35px; width: 222px; }
+.navbar .brand img { padding-top: 3px; width: 190px; }
 
 .icon-white,.nav-pills>.active>a>[class^="icon-"],.nav-pills>.active>a>[class*=" icon-"],.nav-list>.active>a>[class^="icon-"],.nav-list>.active>a>[class*=" icon-"],.navbar-inverse .nav>.active>a>[class^="icon-"],.navbar-inverse .nav>.active>a>[class*=" icon-"],.dropdown-menu>li>a:hover>[class^="icon-"],.dropdown-menu>li>a:hover>[class*=" icon-"],.dropdown-menu>.active>a>[class^="icon-"],.dropdown-menu>.active>a>[class*=" icon-"],.dropdown-submenu:hover>a>[class^="icon-"],.dropdown-submenu:hover>a>[class*=" icon-"]{
   background-image:url("../img/glyphicons-halflings-white.png") !important;
@@ -25,9 +25,16 @@ form label.required {
 
 
 /* blog */
+div.highlight { clear: both; }
 div.post-content {
   margin: 20px 0 40px; 
   width: 100%;
+}
+
+div.post-content code { background-color: #eee; }
+
+div.post-content img {
+  max-width: 100%;
 }
 
 div.post-content .post-image {
