adding theme capabilities

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -23,11 +23,11 @@ form label.required {
   font-weight: bold;
 }
 
-
+#bot_right { position: fixed; bottom: 0px; left: 0px; padding: 3px 6px; border: double 4px; }
 /* blog */
 div.highlight { clear: both; }
 div.post-content {
-  margin: 20px 0 40px; 
+  margin: 20px 0 40px;
   width: 100%;
 }
 
