--- a/txrx/static/less/default.less
+++ b/txrx/static/less/default.less
@@ -7,8 +7,7 @@
 
 
 /*--- bootstrap files - these top two have to come first, everything else is sorted---*/
-@import "variables.less";
-@import "bootswatch.less";
+@import "bs/variables.less";
 @import "bs/mixins.less";
 
 @import "bs/alerts.less";
