--- a/txrx/templates/_post_content.html
+++ b/txrx/templates/_post_content.html
@@ -1,23 +1,34 @@
 {% load cache codrspace_tags thumbnail short_codes crop_util %}
-
+{% load url from future %}
+<div class="post-tags">
+  {% for tag in post.tags %}
+  <a href="{% url "posts_by_tag" tag %}">{{ tag.name|upper }}</a>
+  {% if not forloop.last %}/{% endif %}
+  {% endfor %}
+</div>
 <h2><a href="{{ post.get_absolute_url }}">{% filter striptags|truncatewords:30 %}{% firstof post.title "Untitled" %}{% endfilter %}</a></h2>
 
-<div class="post-meta">
-    {% if post.author == user %}
-        {% if post.status == 'published' %}
-            <span class="label label-success">{{ post.status }}</span>
-        {% endif %}
-        {% if post.status == 'draft' %}
-            <span class="label label-warning">{{ post.status }}</span>
-        {% endif %}
-    {% endif %}
-        by <a href="#" rel="popover" data-original-title="{{ post.author.username }}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
-    {% if post.author == user %}
-        <i class="icon-pencil"></i> <a href="{% url edit post.pk %}">edit</a>
-        <i class="icon-trash"></i> <a href="{% url delete post.pk %}">delete</a>
-    {% endif %}
+<div>
+  {% if post.author == user %}
+  <span class="label label-{% if post.status == 'published' %}success{% else %}warning{% endif %}">{{ post.status }}</span>
+  {% endif %}
+  by <a href="#" rel="popover" data-original-title="{{ post.author.username }}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
+  {% if post.authr == user %}
+  <i class="icon-pencil"></i> <a href="{% url "edit" post.pk %}">edit</a>
+  <i class="icon-trash"></i> <a href="{% url "delete" post.pk %}">delete</a>
+  {% endif %}
 </div>
 
+{% if truncate_posts %}
+<div class="post-content short">
+  {% thumbnail post.photo|get_override:"square_crop" "200x200" as im %}
+  <img class="post-image" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+  {% endthumbnail %}
+  {{ post.content|explosivo|truncatewords_html:50 }}
+  <a href="{{ post.get_absolute_url }}">Read More</a>
+  <div style="clear: both;"></div>
+</div>
+{% else %}
 <div class="post-content">
   {% thumbnail post.photo|get_override:"square_crop" "300x300" as im %}
   <a href="{{ post.photo.file.url }}" class="post-image">
@@ -33,3 +44,4 @@
   {% endif %}
   <div style="clear:both"></div>
 </div>
+{% endif %}
