--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -34,29 +34,6 @@
   {% endif %}
 </div>
 {% for post in posts %}
-<h2><a href="{{ post.get_absolute_url }}">{{ post }}</a></h2>
-<div class="post-meta">
-  {% if post.author == user %}
-  {% if post.status == 'published' %}
-  <span class="label label-success">{{ post.status }}</span>
-  {% endif %}
-  {% if post.status == 'draft' %}
-  <span class="label label-warning">{{ post.status }}</span>
-  {% endif %}
-  {% endif %}
-  by <a href="{% url "post_list" post.author.username %}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
-  {% if post.author == user %}
-  <i class="icon-pencil"></i> <a href="{% url "edit" post.pk %}">edit</a>
-  <i class="icon-trash"></i> <a href="{% url "delete" post.pk %}">delete</a>
-  {% endif %}
-</div>
-<div class="post-content short">
-  {% thumbnail post.photo|get_override:"square_crop" "200x200" as im %}
-  <img class="post-image" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
-  {% endthumbnail %}
-  {{ post.content|explosivo|truncatewords_html:50 }}
-  <a href="{{ post.get_absolute_url }}">Read More</a>
-  <div style="clear: both;"></div>
-</div>
+{% include "_post_content.html" with truncate_posts="True" %}
 {% endfor %}
 {% endblock %}
