tagging tools and unicoding eventoccurrences

--- a/event/templates/event/occurrence_detail.html
+++ b/event/templates/event/occurrence_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load short_codes %}
 
+{% block title %}{{ occurrence.name }}{% endblock %}
 {% block header_content %}{{ occurrence.name }}{% endblock %}
 
 {% block content %}
