--- a/event/templates/event/occurrence_detail.html
+++ b/event/templates/event/occurrence_detail.html
@@ -5,6 +5,6 @@
 {% block header_content %}{{ occurrence.name }}{% endblock %}
 
 {% block content %}
-<p class="lead">{{ occurrence.start }}{% if occurrence.end %} - {{ occurrence.end }}{% endif %}</p>
+<p class="lead">{{ occurrence.start }}{% if occurrence.end %} - {{ occurrence.end.time }}{% endif %}</p>
 <p>{{ occurrence.description|explosivo }}</p>
 {% endblock %}
