--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/txrx.less">
     {% endcompress %}
     <script type="text/javascript" src="{{ STATIC_URL }}less/less.js"> </script>
-
+    <script type="text/javascript">
+      _NOTIFY_URL = "http://classes.txrxlabs.org/tx/rx/ipn/handler/"
+    </script>
     
     {% comment %}
     depracating in favor of less
