adding jsfiddle to codrspace

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -79,6 +79,7 @@ div.post-content {
   margin: 15px 0 40px;
   width: 100%;
   code { background-color: #eee; }
+  iframe { max-width: 100%; }
   img { max-width: 100%; }
   .post-image {
     float: left;
