greatly improved jsfiddle options, ready to deploy

--- a/txrx/templates/_shortcode_help.html
+++ b/txrx/templates/_shortcode_help.html
@@ -7,9 +7,12 @@
   </p>
   <h4>jsfiddles</h4>
   <p class="sc-example">
-    <strong>[jsfiddle id WxH]</strong><br />
+    <strong>[jsfiddle id opt1=val1 opt2=val2 ...]</strong><br />
     <span>Use id from http://jsfiddle.net/(id)</span><br />
-    <span>WxH = width by height (optional)</span>
+    <span><b>Sample Options (all are optional):</b></span><br />
+    <span>width=400 height=500</span><br />
+    <span>tabs=result,js,css,html</span><br />
+    <span>style=border:none;</span>
   </p>
   <h4>Inline Code</h4>
   <p class="sc-example"><strong>[code]</strong>My code goes here<strong>[/code]</strong></p>
