--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends parent %}
 {% load codrspace_tags short_codes %}
 {% load thumbnail crop_util %}
 {% load url from future %}
