--- a/txrx/templates/pjax.html
+++ b/txrx/templates/pjax.html
@@ -7,11 +7,9 @@
 </div>
 {% endblock %}
 <script type="text/javascript">
-(function() {
-  var header_html = "{% block header_content %}{{ SITE_TAGLINE }}{% endblock %}"
+  var header_html = "{% block header_content %}{{ SITE_TAGLINE }}{% endblock %}";
   if (!!header_html) { $(".home-tagline").html(header_html) }
   var page_title = "{% block pre_title %}{{ SITE_NAME }} - {% endblock %} {% block title %}{% endblock %}";
   if (!!page_title) { document.title = page_title; }
   console.log('pjax page loaded');
-})();
 </script>
