--- a/txrx/templates/edit.html
+++ b/txrx/templates/edit.html
@@ -1,4 +1,4 @@
-{% extends "auth_base.html" %}
+{% extends "base.html" %}
 {% load url from future %}
 
 {% block title %}{% if post %}Edit{% else %}Add{% endif %} Post - {% firstof post.title "Untitled" %}{% endblock %}
@@ -52,6 +52,10 @@
     </div>
   </div>
 </form>
+<script type="text/javascript">
+  var tagsAutocomplete = [{% for tag in tags %}"{{ tag }}"{% if not forloop.last %},{% endif %}{% endfor %}];
+  $(document).ready(function () {initCodrspace()});
+</script>
 {% endblock %}
 
 {% block side %}
@@ -65,58 +69,7 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-modal.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-typeahead.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}wmd/wmd.js"></script>
-<script type="text/javascript">
-function insertImage(chunk,callback) {
-  window.wmd_chunk = chunk;
-  window.current_modal = "#image-modal";
-  window.iframe_callback = callback;
-  $("#image-modal iframe").attr("src","{% url "insert_photo" %}");
-  $("#image-modal").modal('show');
-}
-function addImage() {
-  $("#image-modal iframe").attr("src","{% url "add_photo" %}");
-}
-function insertShortCode(obj) {
-  var out = wmd_chunk.before.trimRight()+"\n\n";
-  out += obj.shortcode;
-  out += "\n\n"+wmd_chunk.after.trimLeft();
-  $("#wmd-input").val(out.trim());
-  $(current_modal).modal('hide');
-}
-function insertID(obj) {
-  $("#id_photo").val(obj.id);
-  $(current_modal).modal('hide');
-}
-$(document).ready(function(){
-  $("#lookup_id_photo").click(function(){insertImage('',insertID)})
-  $("#lookup_id_photo").attr("href","javascript:;")
-});
-function extractor(query) {
-  var result = /([^,]+)$/.exec(query);
-  if(result && result[1])
-    return result[1].trim();
-  return '';
-}
-
-$("#id_tags").attr("autocomplete","off");
-
-$('#id_tags').typeahead({
-  source: [{% for tag in tags %}"{{ tag }}"{% if not forloop.last %},{% endif %}{% endfor %}],
-  updater: function(item) {
-    return this.$element.val().replace(/[^,]*$/,'')+item+',';
-  },
-  matcher: function (item) {
-    var tquery = extractor(this.query);
-    if(!tquery) return false;
-    return ~item.toLowerCase().indexOf(tquery)
-  },
-  highlighter: function (item) {
-    var query = extractor(this.query).replace(/[\-\[\]{}()*+?.,\\\^$|#\s]/g, '\\$&')
-    return item.replace(new RegExp('(' + query + ')', 'ig'), function ($1, match) {
-        return '<strong>' + match + '</strong>'
-    })
-  }
-});</script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/blog.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}jquery.insertat.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}jquery.hotkeys.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}codrspace_admin.js"></script>
