--- a/codrspace/templates/edit.html
+++ b/codrspace/templates/edit.html
@@ -1,4 +1,4 @@
-{% extends "auth_base.html" %}
+{% extends parent %}
 
 {% block title %}Edit Post - {% firstof post.title "Untitled" %}{% endblock %}
 
