adding event index page

--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -151,3 +151,14 @@ h4 small{font-size:12px;}
 h5{font-size:12px;}
 h6{font-size:11px;color:#999999;text-transform:uppercase;}
 
+/* events */
+.paginator {
+  text-align: center;
+  .left { float: left; }
+  .right { float: right; }
+}
+
+h3.date {
+  text-decoration: underline;
+  margin: 15px 0 0;
+}
