polished off update_instagram, ready for launch!

--- a/instagram/templates/instagram/index.html
+++ b/instagram/templates/instagram/index.html
@@ -1,20 +1,19 @@
 {% extends "base.html" %}
 {% load thumbnail %}
-{% block wrapper %}
+{% block content %}
 <div id="instagram">
-  <div class="top">
-    <img src="{{ media_url }}instagram_left.png" />
-  </div>
   {% include "pagination.html" %}
-  <ul>{% for photo in page.object_list %}
-    <li>
+  <ul class="unstyled">{% for photo in page.object_list %}
+    <li class="well span3">
       {% thumbnail photo.low_resolution "200x200" crop="center" as small %}
       {% thumbnail photo.standard_resolution "800x800" as large %}
-      <a href="{{ large }}">
-	<img src="{{ small }}" width="{{ small.width }}" height="{{ small.height }}" />
+      <a href="{{ large.url }}">
+	<img src="{{ small.url }}" width="{{ small.width }}" height="{{ small.height }}" />
 	<p>{% if photo.caption %}{{ photo.caption|truncatewords:7 }}{% endif %}</p>
 	<em>{{ photo.datetime|date:"F jS Y" }}</em>
       </a>
+      {% endthumbnail %}
+      {% endthumbnail %}
     </li>{% endfor %}
   </ul>
 {% include "pagination.html" %}
