--- a/event/templates/event/occurrence_detail.html
+++ b/event/templates/event/occurrence_detail.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% load short_codes %}
+{% load thumbnail %}
 
 {% block title %}{{ occurrence.name }}{% endblock %}
 {% block header_content %}{{ occurrence.name }}{% endblock %}
 
 {% block content %}
+{% if occurrence.photoset %}
+{% include "widgets/photo_slideshow.html" with photos=occurrence.photoset.get_photos %}
+{% endif %}
 <p class="lead">{{ occurrence.start }}{% if occurrence.end %} - {{ occurrence.end.time }}{% endif %}</p>
 <p>{{ occurrence.description|explosivo }}</p>
 {% endblock %}
