--- a/membership/templates/membership/join-us.html
+++ b/membership/templates/membership/join-us.html
@@ -18,7 +18,6 @@ function setHiddenFields(that) {
 }
 
 //when pages loaded, update all selects
-$(document).ready(function() {$("select").change()});
 </script>
 {{ flatpage.content|safe }}
 <div class="clear"></div>
@@ -72,7 +71,9 @@ membership_form_parameters['{{ m.name }} - {{ rate.description }}'] = {
 {% endfor %}
 </script>
 {% endfor %}
-
+<script type="text/javascript">
+$(document).ready(function() {$("select").change()});
+</script>
 <div class="clear"></div>
 {% endcache %}
 {% endblock %}
