fixing bug caused by deletion of test course

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -48,9 +48,11 @@
     {% for session in week.sessions %}
     {% include "course/_session_row.html" %}
     {% endfor %}
+    {% comment %}
     {% if request.user.is_superuser and forloop.last %}
     {% include "course/_session_row.html" with session=test_session %}
     {% endif %}
+    {% endcomment %}
   </table>
 </div>
 {% endfor %}
